--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
         Android有自己的语言文化，亦即Java语言。但仅掌握Java还远远不够，还需要学习很多新的
         理论和技术知识来理清头绪，从而指引你穿越陌生的领域。
     </string>
-    <string name="tv_service">hello world</string>
+    <string name="tv_service">随便写点东西</string>
 </resources>
